--- a/task4/templates/recommendations.html
+++ b/task4/templates/recommendations.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="{{ url_for('index') }}">Home</a>
+    <a href="{{ url_for('logout') }}">Logout</a>
     <h1>Your Recommendations</h1>
     <ul>
         {% for recommendation in recommendations %}
