--- a/task4/templates/index.html
+++ b/task4/templates/index.html
@@ -1,18 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     <title>Movie Recommendation System</title>
 </head>
+
 <body>
     <header>
+
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+        <ul class="flashes">
+            {% for category, message in messages %}
+            <li class="{{ category }}">{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+        {% endwith %}
+
+        {% if session['logged_in'] %}
+        <h5 style="text-align: center;">Welcome, {{session['username'] }}</h5>
+        {% endif %}
+
         <h1>Movie Recommendation System</h1>
         <nav>
-            <a href="{{ url_for('signup') }}">Sign Up</a>
-            <a href="{{ url_for('login') }}">Log In</a>
+            {% if session['logged_in'] %}
+            <a href="/logout/">Logout</a>
+            <a href="/search">Dashboard</a>
+            {% else %}
+            <a href="/login">Login</a>
+            <a href="/register">Register</a>
+            {% endif %}
         </nav>
+        
     </header>
+
+    <script>
+        setTimeout(function () {
+            var flashes = document.querySelector('.flashes');
+            if (flashes) {
+                flashes.remove();
+            }
+        }, 2000); 
+    </script>
+
 </body>
+
 </html>
