--- a/task4/templates/recommendations.html
+++ b/task4/templates/recommendations.html
@@ -8,7 +8,17 @@
 </head>
 
 <body>
-    <a href="{{ url_for('logout') }}">Logout</a>
+
+    {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+    <ul class="flashes">
+        {% for category, message in messages %}
+        <li class="{{ category }}">{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+    {% endwith %}
+
     <h1>Your Recommendations</h1>
     <ul>
         {% for recommendation in recommendations %}
@@ -16,15 +26,16 @@
         {% endfor %}
     </ul>
     <a href="{{ url_for('search') }}">Back to Search</a>
-    {% with messages = get_flashed_messages(with_categories=true) %}
-    {% if messages %}
-    <ul>
-        {% for category, message in messages %}
-        <li class="{{ category }}">{{ message }}</li>
-        {% endfor %}
-    </ul>
-    {% endif %}
-    {% endwith %}
+    
+    <script>
+        setTimeout(function () {
+            var flashes = document.querySelector('.flashes');
+            if (flashes) {
+                flashes.remove();
+            }
+        }, 2000); 
+    </script>
+
 </body>
 
 </html>
