--- a/task4/templates/register.html
+++ b/task4/templates/register.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Register</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 
@@ -11,24 +11,27 @@
     {% from "includes/formhelpers.html" import render_field %}
 
     {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-            <ul class="flashes">
-                {% for category, message in messages %}
-                    <li class="{{ category }}">{{ message }}</li>
-                {% endfor %}
-            </ul>
-        {% endif %}
+    {% if messages %}
+    <ul class="flashes">
+        {% for category, message in messages %}
+        <li class="{{ category }}">{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
     {% endwith %}
 
     <a href="{{ url_for('index') }}">Home</a>
     <hr>
-    <h1><strong>LOGIN</strong></h1>
-    <form method="POST" action="/login">
-        {{ render_field(form.email, class="form-control") }}
-        {{ render_field(form.password, class="form-control") }}
-        <button type="submit">Login</button>
+    <h1><strong>Register</strong></h1>
+    <form method="POST">
+        {{ render_field(form.name) }}
+        {{ render_field(form.username) }}
+        {{ render_field(form.email) }}
+        {{ render_field(form.password) }}
+        {{ render_field(form.confirm) }}
+        <button type="submit">Register</button>
     </form>
-    <a href="/register">Don't have an account? Sign up here</a>
+    <a href="/login">Already have an account? Login here</a>
 
     <script>
         setTimeout(function () {
